1.0.4
If --filepath starts with '#' use solid colour as back ground eg --filepath="#80af80".
Added --no-duplicates option to prevent duplicate items.
Added --filpath option to use image as background rather than root window.
Added help option.
Added cli prefs overides.
Added prefs file.
Reduced flickering when adding/removing icons.

1.0.1
Added aboveall/belowall.
Auto set layout to vertical/horizontal for N,S,W,E.
Added reposition window to N,S,E,W.
Added choose montior to display on.
Added vertical layout.
Added reposition window to NW,NE,SW,SE.
Reduced flikering when adding icon.
Set BG to root pixmap.
Integrate with liblfstoolkit.
Complete rewrite from scratch to c++.
Dumped all Stalonetray code ( temp step back ).

1.0.0
Added to LFSDesktopProject

0.9.0
Removed uneeded/unwanted settings.
Fixed seg fault with --pixmap-bg cli arg.
Removed scrollbars.
Renamed to LFSTray.
Removed remote control.
Renamed.
Removed KDE Icons,Debug and Logging code.
added autogen.sh.
Forked from Stalonetray.